--- a/accounts-dev.properties
+++ b/accounts-dev.properties
@@ -1,9 +1,11 @@
-accounts.msg="dev Bank application"
-accounts.build-version=6
-accounts.mailDetails.hostName=dev-accounts@abc.com
-accounts.mailDetails.port=9020
-accounts.mailDetails.from=shreyas@abc.com
-accounts.mailDetails.subject=Your account details for dev environment
-accounts.activeBranches[0]=Mumbai
-accounts.activeBranches[1]=Hubballi
+accounts.msg =Welcome to the mybank Accounts Dev application
+accounts.build-version=2
 
+accounts.mailDetails.hostName=dev-accounts@mybank.com
+accounts.mailDetails.port=9020
+accounts.mailDetails.from=dev-accounts@mybank.com
+accounts.mailDetails.subject=Your Account Details from Eazy Bank Dev Environment from git
+
+accounts.activeBranches[0]=Chennai
+accounts.activeBranches[1]=Berlin
+accounts.activeBranches[2]=Indianapollis
