--- a/accounts.properties
+++ b/accounts.properties
@@ -1,9 +1,11 @@
-accounts.msg="Bank default application"
-accounts.build-version=5
-accounts.mailDetails.hostName=default-accounts@abc.com
-accounts.mailDetails.port=9000
-accounts.mailDetails.from=shreyas@abc.com
-accounts.mailDetails.subject=Your account details for default environment
-accounts.activeBranches[0]=Mumbai
-accounts.activeBranches[1]=Hubballi
+accounts.msg =Welcome to the MyBank Accounts Default application
+accounts.build-version=3
 
+accounts.mailDetails.hostName=default-accounts@mybank.com
+accounts.mailDetails.port=9000
+accounts.mailDetails.from=default-accounts@mybank.com
+accounts.mailDetails.subject=Your Account Details from myBank Default Environment from git
+
+accounts.activeBranches[0]=Mumbai
+accounts.activeBranches[1]=London
+accounts.activeBranches[2]=Washington
