--- a/accounts-dev.properties
+++ b/accounts-dev.properties
@@ -4,7 +4,7 @@ accounts.build-version=2
 accounts.mailDetails.hostName=dev-accounts@mybank.com
 accounts.mailDetails.port=9020
 accounts.mailDetails.from=dev-accounts@mybank.com
-accounts.mailDetails.subject=Your Account Details from Eazy Bank Dev Environment from git
+accounts.mailDetails.subject=Your Account Details from MyBank Dev Environment from git
 
 accounts.activeBranches[0]=Chennai
 accounts.activeBranches[1]=Berlin
